--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
-  "name": "quizzera",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-quizzera",
+  "description": "A application for quizzes, using React with Typescript",
+  "version": "1.0.0",
+  "main": "src/index.tsx",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paulosandinof/react-quizzera"
+  },
+  "keywords": [
+    "Javascript",
+    "Typescript",
+    "JS",
+    "TS",
+    "React"
+  ],
+  "author": "Paulo Sandino",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,27 +39,6 @@
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
@@ -55,5 +54,17 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "json-server": "^0.16.1",
     "prettier": "^2.0.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
